# backend

./: .gitignore  10526_trickertrust.conf  Dockerfile  README.md  docker-compose.yaml  example.env  test.py
app/: pyproject.toml
app/TrickerTrust/: manage.py
app/TrickerTrust/TrickerTrust/: asgi.py  settings.py  urls.py  wsgi.py
app/TrickerTrust/TrickerTrust/playground_core/: get_urls.py  main.py  result.py
app/TrickerTrust/playground_dev/: apps.py  messages.py  urls.py  views.py
app/TrickerTrust/randommethods/: apps.py  urls.py  views.py
backend/: Dockerfile  entrypoint.sh
backend/app/: pyproject.toml
backend/app/TrickerTrust/core/: asgi.py  celery.py  permission.py  settings.py  urls.py  wsgi.py
backend/app/TrickerTrust/core/playground_core/: get_urls.py  main.py  params.py  result.py
backend/app/TrickerTrust/currency_course/: apps.py  constants.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/TrickerTrust/playground_dev/: constants.py  urls.py  views.py
backend/app/TrickerTrust/promotion/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/app/TrickerTrust/promotion/migrations/: 0001_initial.py
backend/app/TrickerTrust/technical_support/: apps.py  models.py  tasks.py  urls.py  views.py
backend/app/TrickerTrust/technical_support/migrations/: 0001_initial.py
