[tool.poetry]
name = "trickstertrust"
version = "0.1.0"
description = ""
authors = ["DarkLorianPrime <lolpokens@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
redis = "^4.5.4"
celery = "^5.2.7"
python-dotenv = "^1.0.0"
django-cors-headers = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-celery-beat = "^2.5.0"
xml-to-dict = "^0.1.6"
requests = "^2.28.2"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
